# Eltex_project

./: .gitignore  CMakeLists.txt  Makefile  README.md  config_parser.h  daemon_preparation.c  kill_daemon.sh  kill_daeomon.sh  log  main.c  pthread_init.c  pthread_init.h  sender.c  sender.h  simple_sniffer.c  sniffer.c  sniffer_header.h  test.c  vlan-tagger.cfg  vlan_tagger.c  vlan_tagger.h  vlan_tagger_main.c
config_parser/: Makefile  README.MD  config_parser.c  config_parser.h  config_parser.h.gch  vlan-tagger.cfg
init/: pthread_init.c  pthread_init.h
logger/: .gitignore  Makefile  README.MD  logger.c  logger.h
queue/: .gitignore  CMakeLists.txt  Makefile  README.MD  main.c  queue.c  queue.h
sender/: sender.c
sniffer/: sniffer.c
tagger/: vlan_tagger.c  vlan_tagger.h
